tests/rosetta/out/Swift/check-that-file-exists.error
run error: exit status 1
/tmp/TestMochiToSwiftcheck-that-file-exists2090647330/001/main.swift:3:20: error: missing argument label 'where:' in call
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:11Z
 2 | func printStat(_ fs: [String: Bool], _ path: String) {
 3 |     if fs.contains(path) {
   |                    `- error: missing argument label 'where:' in call
 4 |         if fs[path] {
 5 |             print(path + " is a directory")

/tmp/TestMochiToSwiftcheck-that-file-exists2090647330/001/main.swift:3:20: error: cannot convert value of type 'String' to expected argument type '(Dictionary<String, Bool>.Element) throws -> Bool' (aka '((key: String, value: Bool)) throws -> Bool')
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:11Z
 2 | func printStat(_ fs: [String: Bool], _ path: String) {
 3 |     if fs.contains(path) {
   |                    `- error: cannot convert value of type 'String' to expected argument type '(Dictionary<String, Bool>.Element) throws -> Bool' (aka '((key: String, value: Bool)) throws -> Bool')
 4 |         if fs[path] {
 5 |             print(path + " is a directory")

/tmp/TestMochiToSwiftcheck-that-file-exists2090647330/001/main.swift:4:14: error: value of optional type 'Bool?' must be unwrapped to a value of type 'Bool'
 2 | func printStat(_ fs: [String: Bool], _ path: String) {
 3 |     if fs.contains(path) {
 4 |         if fs[path] {
   |              |- error: value of optional type 'Bool?' must be unwrapped to a value of type 'Bool'
   |              |- note: coalesce using '??' to provide a default when the optional value contains 'nil'
   |              `- note: force-unwrap using '!' to abort execution if the optional value contains 'nil'
 5 |             print(path + " is a directory")
 6 |         }

/tmp/TestMochiToSwiftcheck-that-file-exists2090647330/001/main.swift:16:30: error: use [:] to get an empty dictionary literal
14 | }
15 | func main() {
16 |     var fs: [String: Bool] = []
   |                              `- error: use [:] to get an empty dictionary literal
17 |     fs["docs"] = true
18 |     for p in ["input.txt", "/input.txt", "docs", "/docs"] {
